[gd_scene load_steps=4 format=3 uid="uid://da786rrn2jbg0"]

[ext_resource type="Script" uid="uid://c5g7s2aouvnse" path="res://src/2_manager/manager.gd" id="1_w1drn"]
[ext_resource type="Texture2D" uid="uid://c8iujtwouor0g" path="res://assets/manager_background.png" id="1_xdvua"]
[ext_resource type="PackedScene" uid="uid://ci4uj02mvx8ah" path="res://src/interactables/path_to/path_to_interactable.tscn" id="2_w1drn"]

[node name="Manager" type="Window"]
title = "SBTF Mod Manager"
initial_position = 1
size = Vector2i(895, 480)
script = ExtResource("1_w1drn")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_xdvua")
expand_mode = 3
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -10.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2

[node name="GlobalSettingsContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="BackToMenuButton" type="Button" parent="VBoxContainer/GlobalSettingsContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_stretch_ratio = 0.52
text = "<--- Back to Menu"

[node name="ModsFolderPathInteractable" parent="VBoxContainer/GlobalSettingsContainer" instance=ExtResource("2_w1drn")]
layout_mode = 2
size_flags_horizontal = 3
label_name = "Path to mods folder"

[node name="StartGameButton" type="Button" parent="VBoxContainer/GlobalSettingsContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_stretch_ratio = 0.52
text = "Start Game"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ModsContainer" type="VBoxContainer" parent="VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HSplitContainer/ModsContainer"]
layout_mode = 2
text = "Mod List"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/HSplitContainer/ModsContainer"]
layout_mode = 2

[node name="ModList" type="ItemList" parent="VBoxContainer/HSplitContainer/ModsContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/HSplitContainer/ModsContainer"]
layout_mode = 2

[node name="ToggleModButton" type="Button" parent="VBoxContainer/HSplitContainer/ModsContainer"]
layout_mode = 2
text = "Disable Mod
"

[node name="ModDetailContainer" type="VBoxContainer" parent="VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HSplitContainer/ModDetailContainer"]
layout_mode = 2
text = "Selected Mod"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/HSplitContainer/ModDetailContainer"]
layout_mode = 2

[node name="ModNameLabel" type="Label" parent="VBoxContainer/HSplitContainer/ModDetailContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "test"
horizontal_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer/HSplitContainer/ModDetailContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HSplitContainer/ModDetailContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="DescriptionLabel" type="Label" parent="VBoxContainer/HSplitContainer/ModDetailContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos."
vertical_alignment = 1
autowrap_mode = 2
